# diesel-model

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
diesel_model/: Cargo.toml
diesel_model/src/: lib.rs
diesel_model_macros/: Cargo.toml
diesel_model_macros/src/: lib.rs
examples/first/: Cargo.toml
examples/first/migrations/2019-12-30-164314_create_posts/: up.sql
examples/first/src/: main.rs  models.rs
